# NeuroNexus

./: .gitignore  CODEX.md  COMPLETION_REPORT.md  Cargo.toml  DOCS_STRUCTURE.md  ESSAY_AI_IMPLEMENTATION.md  I18N_COMPLETION_REPORT.md  I18N_GUIDE.md  I18N_IMPLEMENTATION_SUMMARY.md  I18N_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  IMPORT_GUIDE.md  PROGRESS.md  QUICKSTART.md  README.md  README_ESSAY_AI.md  SEEDERS.md  STATUS.md  TESTING.md  TRANSLATION_FILES_COMPLETE.md  TRANSLATION_KEYS_REFERENCE.md  VISUALIZATION_EXAMPLES.md  exam.json  sample_questions_import.json  sample_trails_import.json  show_structure.py  test_essay_ai.sh  trails.json  validate_schemas.js  validate_schemas.py
.qoder/quests/: back-and-ux-interface.md  essay-ai-correction.md  interface-redesign.md  internationalization-localization.md  json-schema-visualization.md  model-loading-interface-rework.md  profile-import-button.md  rounded-ui.md
crates/app/: Cargo.toml
crates/app/src/: app.rs  context.rs  main.rs  theme.rs
crates/app/src/components/: ai_config_panel.rs  brain_icon.rs  cyber_card.rs  import_modal.rs  loading_screen.rs  mod.rs  model_status_indicator.rs  navigation_menu.rs  neon_button.rs  neon_input.rs  neon_progress_bar.rs  sidebar.rs  status_bar.rs  tab_bar.rs  toggle.rs  token_guide.rs
crates/app/src/pages/: essay_detail.rs  essays.rs  home.rs  knowledge_trails.rs  lesson_viewer.rs  mod.rs  new_essay.rs  profile.rs  question_detail.rs  questions.rs  trail_detail.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  repositories.rs  seeders.rs
crates/domain/: Cargo.toml
crates/domain/src/: essay.rs  knowledge_trail.rs  lib.rs  question.rs  reading_content.rs  traits.rs  user.rs
crates/services/: Cargo.toml
crates/services/src/: ai.rs  ai_config.rs  evaluation.rs  lib.rs  rubrics.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  types.rs
crates/shared/src/i18n/: fluent_loader.rs  locale.rs  mod.rs  translator.rs
crates/shared/tests/: i18n_tests.rs
docs/: README.md  TRANSLATIONS.md
docs/pt/: CODEX_TRANSLATION_NEEDED.md  QUICKSTART.md  README.md
docs/zh/: QUICKSTART.md  README.md
locales/en-US/: common.ftl  domain.ftl  essays.ftl  home.ftl  navigation.ftl  profile.ftl  questions.ftl  trails.ftl
locales/pt-BR/: common.ftl  domain.ftl  essays.ftl  home.ftl  navigation.ftl  profile.ftl  questions.ftl  trails.ftl
locales/zh-CN/: common.ftl  domain.ftl  essays.ftl  home.ftl  navigation.ftl  profile.ftl  questions.ftl  trails.ftl
schemas/: INDEX.md  README.md
schemas/entities/: essay.schema.json  knowledge_trail.schema.json  question.schema.json
schemas/enums/: content_type.schema.json  difficulty.schema.json  exam_type.schema.json  subject.schema.json
schemas/imports/: question_import.schema.json  trail_import.schema.json
schemas/meta/: common.schema.json
