[workspace]
members = [
    "crates/domain",
    "crates/data",
    "crates/app",
    "crates/shared",
    "crates/services",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NeuroNexus Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Dioxus
dioxus = "0.7"
dioxus-router = "0.7"
dioxus-web = "0.7"
dioxus-desktop = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Collections
indexmap = "2.0"

