[package]
name = "services"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true

# AI/ML dependencies for offline inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = { version = "0.3", features = ["tokio"] }
tracing = "0.1"
once_cell = "1.19"
base64 = "0.21"
dirs = "5.0"

